Tue Jun 10 12:50:16 2003  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/modules/ProjectCreator.pm:

          Only read in a base project if it hasn't been read for the current
          project.

Tue Jun 10 11:35:29 2003  Chad Elliott  <elliott_c@ociweb.com>

        * bin/create_ace_build:

          Fixed a bug in the message printed about the config.h and
          platform_macros.GNU.

Tue Jun 10 11:09:12 2003  Chad Elliott  <elliott_c@ociweb.com>

        * bin/PerlACE/Process.pm:

          Added a delay_factor() function that could be used to dynamically
          determine the delay factor for the test scripts.  Some
          coordination is required to ensure that the delay factor and the
          times used in run_test.pl scripts work together.

        * bin/PerlACE/Run_Test.pm:

          Added code to support running tests using the cygwin perl.

        * bin/create_ace_build:

          Added windows support by using hard links (only with MSWin32
          version of perl).

Mon Jun  9 18:59:51 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

        * THANKS: Added Gan Deng to the hall of fame.

Mon Jun  9 13:16:38 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

        * bin/performance_stats.sh: The sequence<> latency tests will also
          be  monitored on a daily basis.

Mon Jun  9 08:27:12 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Makefile.ace:
          Added NT_Service. Thanks to Wolfgang Schroeder <cpp_kurs@arcor.de>
          for reporting this.

Sun Jun  8 22:36:32 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

        * THANKS: Added Andrew Voumard to the hall of fame.

Sun Jun  8 17:55:18 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        * bin/g++_metrics.sh:
          Fixed a typo that caused the script to fail.

Sun Jun  8 10:52:23 2003  Nanbor Wang  <nanbor@cs.wustl.edu>

        * bin/PerlACE/Process.pm:
        * bin/PerlACE/Process_Win32.pm: